# MEA-Absorption-Column

./: LICENSE  MANIFEST.in  README.md  practice.ipynb  pyproject.toml  requirements.txt  run.py  setup.py
MEA_Absorption_Column/: Parameters.py  main.py  main2.py  practice.ipynb
MEA_Absorption_Column/BVP/: ABS_Column.py  Run_Model.py  Shooter.py  Simulate_Abs_Column.py  Solve_BCs.py  enhancement_model_analysis.py
MEA_Absorption_Column/Convert_Data/: Convert_Data.py  Convert_NCCC_Data.py  Convert_SRP_Data.py  Get_NCCC_Data.py
MEA_Absorption_Column/Kinetics/: Enhancement_Factor.py
MEA_Absorption_Column/Properties/: Density.py  Diffusivity.py  Heat_Capacity.py  Heat_Of_Reaction.py  Heat_Of_Vaporization.py  Henrys_Law.py  Surface_Tension.py  Thermal_Conductivity.py  Thermophysical_Properties.py  Transport_Properties.py  Viscosity.py
MEA_Absorption_Column/Thermodynamics/: Chemical_Equilibrium.py  Density.py  Driving_Force.py  Enthalpy.py  Fugacities_Coeff.py  Fugacity.py  Fugacity_Coeff.py  Get_Temperature_Enthalpy.py  Jou_1995.csv  NRTL.py  PC_SAFT.py  PC_SAFT_test.py  Solve_ChemEQ.py  Solve_ChemEQ_2.py  Solve_ChemEQ_Extent_minimize.py  Solve_Driving_Force.py
MEA_Absorption_Column/Transport/: Enhancement_Factor.py  Flux.py  Heat_Transfer.py  Heat_Transfer_Coeff.py  Hydraulic_Variables_Correlations.py  Mass_Transfer_Coeff.py  Pressure_Drop.py  Solve_Flux.py  Solve_MassTransfer.py  Solve_Temperature_Change.py  Transfer_Coefficients.py
MEA_Absorption_Column/data/: C_cases_data.csv  C_cases_data.xlsx  Interpolations.xlsx  Tl_matrix.csv  (+9 more)
tests/: test_run_model.py
(+69 files in other folders)
